--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.83.0",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
