--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pretty-quick": "^3.1.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5"
@@ -34,5 +35,5 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.4"
   },
-  "precommit": "NODE_ENV=production lint-staged" 
+  "precommit": "NODE_ENV=production lint-staged"
 }
