--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
@@ -33,5 +34,6 @@
     "eslint": "^8.13.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.29.4"
-  }
+  },
+  "precommit": "NODE_ENV=production lint-staged"
 }
